feat: Develop Editor Scope
이전 편집기에서는 EditorActivity가 존재하여 ActivityRetained Scope 으로 에디터 세션을 관리하였는데
Navigator component 의 기능인 중첩 그래프를 사용하면서 커스텀한 Scope 가 명시적으로 필요하여 개발함.

--- a/presentation/src/main/res/navigation/editor_graph.xml
+++ b/presentation/src/main/res/navigation/editor_graph.xml
@@ -27,7 +27,11 @@
         android:id="@+id/galleryFragment"
         android:name="kr.marko.photobook.presentation.gallery.GalleryFragment"
         android:label="GalleryFragment"
-        tools:layout="@layout/fragment_gallery"/>
+        tools:layout="@layout/fragment_gallery">
+        <action
+            android:id="@+id/action_galleryFragment_to_sketchFragment"
+            app:destination="@id/sketchFragment" />
+    </fragment>
     <fragment
         android:id="@+id/sketchFragment"
         android:name="kr.marko.photobook.presentation.sketch.SketchFragment"
